--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,15 @@
   </head>
 
   <body>
+    <div class="navbar-lewagon">
+      <div>
+        <a class="navbar-brand" href="">...</a>
+        <span>COCKTAIL PARADISE</span>
+      </div>
+      <div class="navbar-wagon-right hidden-xs hidden-sm"></div>
+        <%= link_to "Add a cocktail", new_cocktail_path %>
+    </div>
     <%= yield %>
+    
   </body>
 </html>
