--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,18 @@
   </head>
 
   <body>
-    <div class="navbar-lewagon">
-      <div>
-        <a class="navbar-brand" href="">...</a>
-        <span>COCKTAIL PARADISE</span>
+    <div class="navbar-wagon">
+      <div class="navbar-wagon-brand">
+        <a class="logo" href=""><i class="fas fa-cocktail"></i> COCKTAIL PARADISE</a>
       </div>
-      <div class="navbar-wagon-right hidden-xs hidden-sm"></div>
-        <%= link_to "Add a cocktail", new_cocktail_path %>
+      <div class="navbar-wagon-right hidden-xs hidden-sm">
+        <%= link_to " + Add a cocktail", new_cocktail_path, :class => "navbar-wagon-link" %>
+      </div>
+        
     </div>
     <%= yield %>
+    <%= javascript_pack_tag 'application' %>
+    <%= stylesheet_pack_tag 'application' %>
     
   </body>
 </html>
