--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,17 +5,26 @@
   </div>
 </div>
 
+
 <div class= "container">
     <div class= "row col-xs-12">
     	<% @cocktails.each do |cocktail| %>
-          <div class= "card col-xs-12 col-md-4">
-            <div class="card-description">
-              <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
-            </div>
-          
-          <%= image_tag cocktail.picture_url(:thumb) if cocktail.picture_url %>
-          </div>
-         <% end %>
+            <% if cocktail.photo.attached? %>
+              <div class="card col-xs-12 col-md-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill%>')" >
+              <div class="card-description">
+                <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
+              </div>
+              <p><%= link_to 'Edit', edit_cocktail_path(cocktail) %></p>
+              </div>
+            <%else %>
+              <div class="card col-xs-12 col-md-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), height: 300, width: 400, crop: :fill%>')" >
+                <div class="card-description">
+                  <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
+                </div>
+                <p><%= link_to 'Edit', edit_cocktail_path(cocktail) %></p>
+              </div>
+            <%end %>
+      <% end %>
     </div>
 </div>
 
