--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -4,6 +4,7 @@
 
 <%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo, as: :file, direct_upload: true %>
   <!-- <%= f.association :doses %> -->
   <!-- <%= f.input :ingredients, collection:Ingredient.all %> -->
   <!-- <%= f.association :ingredients%> -->
