edit and delete on index

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -8,6 +8,14 @@
   border-radius: 20px;
   margin: 10px;
   border: 2px solid rgba(237,99,166, 0.5);
+  a {
+    color:white;
+    text-decoration: none;
+    &:hover{
+      color:$pink;
+    }
+  }
+
 }
 .card-user {
   position: absolute;
