--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -21,7 +21,8 @@
                 <div class="card-description">
                   <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
                 </div>
-                <p><%= link_to 'Edit', edit_cocktail_path(cocktail) %></p>
+                <p><%= link_to 'Edit', edit_cocktail_path(cocktail)%></p>
+                <p><%= link_to 'Destroy', cocktail, method: "delete", data: { confirm: 'Are you sure?' }%></p>
               </div>
             <%end %>
       <% end %>
