--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,9 +1,19 @@
 
-<h2>Add a new dose for <%= @cocktail.name %></h2>
+<div class="container">
+	<div class="row">
+		<h2>Add a new dose for <%= @cocktail.name %></h2>
+	</div>
 
-<%= simple_form_for [@cocktail, @dose] do |f| %>
-  <%= f.input :description %>
-  <%= f.input :ingredient_id, collection:Ingredient.all, nput_html: { multiple: true, class: 'multiple-select' }, include_hidden: false%>
-  <%= f.button :submit, 'Add this to my new cocktail' %>
-<% end %>
+	<div class="row">
+		<%= simple_form_for [@cocktail, @dose] do |f| %>
+		  <%= f.input :description %>
+		  <%= f.input :ingredient_id, collection:Ingredient.all, nput_html: { multiple: true, class: 'multiple-select' }, include_hidden: false%>
+		  <%= f.button :submit, 'Add this to my new cocktail' %>
+		<% end %>
+	</div>
+	
+
+	
+</div>
+
 
