--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <body>
     <div class="navbar-wagon">
       <div class="navbar-wagon-brand">
-        <a class="logo" href=""><i class="fas fa-cocktail"></i> COCKTAIL PARADISE</a>
+        <a class="logo" href="/cocktails"><i class="fas fa-cocktail"></i> COCKTAIL PARADISE</a>
       </div>
       <div class="navbar-wagon-right hidden-xs hidden-sm">
         <%= link_to " + Add a cocktail", new_cocktail_path, :class => "navbar-wagon-link" %>
