--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,16 +3,18 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-4 card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @cocktail.photo.key, height: 300, width: 400, crop: :fill%>')" >
 		</div>
-		<div class="col-xs-12 col-md-4 card">
+		<div class="col-xs-12 col-md-4 card card-show">
 			<h1><%= @cocktail.name %></h1>
-			<p> 
+			<ul> 
 				<% @cocktail.doses.each do |dose| %>
-				<%= dose.description %>
-				<%= dose.ingredient.name %>
+				<li><%= dose.description %>
+				<%= dose.ingredient.name %></li>
 				<% end %>
-			</p>
-			<%= link_to 'Add a new dose to my cocktail', new_cocktail_dose_path(@cocktail) %>
-            <%= link_to 'Back', cocktails_path %>
+			</ul>
+			<div class="card-btn">
+			  <%= link_to 'Add a new dose to my cocktail', new_cocktail_dose_path(@cocktail) %>
+              <%= link_to ' / Back', cocktails_path %>	
+			</div>
 		</div>
 		
 	</div>
