--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -8,7 +8,11 @@
 			<ul> 
 				<% @cocktail.doses.each do |dose| %>
 				<li><%= dose.description %>
-				<%= dose.ingredient.name %></li>
+				<%= dose.ingredient.name %>
+				<%= link_to dose, method: "delete", data: { confirm: 'Are you sure?' } do %>
+                   <i class="fas fa-trash-alt"></i>
+                <% end %>
+				</li>
 				<% end %>
 			</ul>
 			<div class="card-btn">
