--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -13,6 +13,7 @@
 .banner h1 {
   font-size: 50px;
   font-weight: bold;
+  font-family: $special;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 }
 .banner p {
