--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,23 @@
         
     </div>
     <%= yield %>
+    <div class="footer">
+      <div class="footer-links">
+        <a href="https://github.com/irwintsay/tom-cruise-omdb"><i class="fab fa-github"></i></a>
+        <a href="https://www.instagram.com/tipsybartender/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/groups/1857840891102431/"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com/search?q=tom%20cruise%20barman&src=typed_query"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/tom-cruise-86276b146/"><i class="fab fa-linkedin"></i></a>
+      </div>
+      <div class="footer-copyright">
+        This footer is made with
+        <%= link_to "https://youtu.be/XZsiY9S4WpI" do %>
+           <i class="fas fa-heart"></i>
+        <% end %>
+        at Le Wagon
+      </div>
+    </div>
+
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_pack_tag 'application' %>
     
